cleaned up integration test for EthChainService Redeem and guarded from normal testing with build tag. Cleaned up data validation and return data from EthChainService Redeem. Added old private key export redeem route back as /export. Updated swagger doc for export route.
