# gui/swagger.yaml
@@ -218,33 +218,31 @@ paths:
         type: "array"
         items:
           $ref: "#/definitions/RedeemPhononRequest"
-
-    # Saving this to become the "export" route
-    # /cards/{sessionID}/phonon/{phononIndex}/redeem:
-    # post:
-    #   tags:
-    #   - "phonons"
-    #   responses:
-    #     "404":
-    #       description: "Either the session or phonon doesn't exist"
-    #     "200":
-    #       description: "Descriptor set properly"
-    #       schema:
-    #         type: "object"
-    #         properties:
-    #           privateKey:
-    #             type: "string"
-    # parameters:
-    # - in: path
-    #   required: true
-    #   name: sessionID
-    #   type: string
-    #   description: sessionID of connected card
-    # - in: path
-    #   required: true
-    #   name: phononIndex
-    #   type: string
-    #   description: index of phonon to redeem
+  /cards/{sessionID}/phonon/{phononIndex}/export:
+    post:
+      tags:
+      - "phonons"
+      responses:
+        "404":
+          description: "Either the session or phonon doesn't exist"
+        "200":
+          description: "Descriptor set properly"
+          schema:
+            type: "object"
+            properties:
+              privateKey:
+                type: "string"
+    parameters:
+    - in: path
+      required: true
+      name: sessionID
+      type: string
+      description: sessionID of connected card
+    - in: path
+      required: true
+      name: phononIndex
+      type: string
+      description: index of phonon to redeem
 
   /cards/{sessionID}/phonon/initDeposit:
     post:
